# gitlab-nexus-cpp-conan-cmake-containers-demo

./: .env  .gitignore  Dockerfile-CI  README.md  Vagrantfile  build-ci-image.sh  clean-conan2-cache.sh  configure-gitlab.sh  configure-nexus.sh  docker-compose.yml  harbor.yml  register-runner.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
fibonacci/: .gitlab-ci.yml  CMakeLists.txt  build.sh  conanfile.py  upload-package.sh
fibonacci-webservice/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  build-image.sh  build.sh  conanfile.py
fibonacci-webservice/src/: app_component.hpp  main.cpp
fibonacci-webservice/src/controller/: fibonacci_controller.hpp
fibonacci-webservice/src/dto/: dtos.hpp
fibonacci-webservice/test/: fibonacci_handler_tests.cpp
fibonacci/src/: fibonacci.cpp
fibonacci/test_package/: CMakeLists.txt  conanfile.py
libfibonacci/: CMakeLists.txt  build.sh  conanfile.py
libfibonacci/include/: Fibonacci.h
libfibonacci/src/: Fibonacci.cpp
libfibonacci/tests/: FibonacciTests.cpp
